Add introduction to report.

--- a/report/report.tex
+++ b/report/report.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}
 \usepackage{booktabs}
 \usepackage{minted}
+\usepackage{hyperref}
 \usepackage[dvipsnames]{xcolor}
 \definecolor{LightGray}{gray}{0.95}
 \setminted{
@@ -29,6 +30,11 @@
 
 \begin{document}
 \maketitle
+
+\section*{Introduction}
+In this report we explain how the solution for the assignment was developed and we highlight some interesting visualizations and analysis of our results.\\
+Link to github: \href{https://github.com/JacobSalvi/software-analytics-bug-triaging}{bug triaging}\\
+Link to pre-trained models: \href{https://usi365-my.sharepoint.com/:u:/g/personal/alberj_usi_ch/ETIADAeiFuZMpq4sqEEyNdMBL69uAv7qzqJbgXMEkZxUDw?e=zUUBDH}{models}
 
 \section*{Data collection}
 \subsection*{Issues collections}
