--- a/report/report.tex
+++ b/report/report.tex
@@ -1,4 +1,3 @@
-
 \documentclass[tikz,10pt,fleqn]{article}
 \usepackage{amsmath}
 \usepackage{algorithm}
@@ -53,7 +52,7 @@ response = requests.request("GET", url, headers=headers, data=payload)
 
 By fetching the issues in ascending order we should get issues with issues number increasing from number 1 onward. We limited our search to issues in the closed state, as can be seen from the previous code snippet, and we only kept the issues with exactly one assignee, as shown in the following snippet.\\
 \begin{minted}{python}
-issues_to_keep = [issue for issue in issues if issue["number"] 
+issues_to_keep = [issue for issue in issues if issue["number"]
 <= max_issue_number and len(issue["assignees"]) == 1]
 \end{minted}
 
@@ -67,16 +66,16 @@ We extracted commits from the \textbf{main branch} using the GitHub API. Attempt
 
 \section*{Pre processing}
 
-The data had to be pre-processed before being given to the model for training.  
-Of all the information we retrieved in the previous step, we decided to keep only the 'title', 'body', 'id', 'number', 'url', 'assignee', and the 'labels'.\\ 
+The data had to be pre-processed before being given to the model for training.
+Of all the information we retrieved in the previous step, we decided to keep only the 'title', 'body', 'id', 'number', 'url', 'assignee', and the 'labels'.\\
 The title and body required the most preprocessing, given that they contain the bulk of the text.  \\
 From the raw data we obtained, we first removed the issue pertaining to pull requests.\\
 Then, given that the bodies of the issues are written in Markdown, we have used a Markdown library to parse them.\\
 Some elements, such as HTML tags, links, and images have been removed during the parsing. The code blocks are kept exactly as is.\\
 The main parts that have been modified then are headings, paragraphs, and lists.
 
-All text was converted to lowercase, and contractions were expanded to standardize word forms. Emojis and special characters were removed to decrease noise in the data, and any residual URLs and email addresses were eliminated. Mentions and hashtags were removed as well. We also normalized whitespace by collapsing multiple spaces into a single space, and we removed the diacritics.  
-The text was then tokenized, punctuation was removed from tokens, with the exception of keeping the octothorpe in the word 'C\#' and 'F\#', since these are programming language names, and module names. Tokens longer than 40 characters were excluded. We removed common English stopwords and lemmatized the remaining words to their base forms.\\ 
+All text was converted to lowercase, and contractions were expanded to standardize word forms. Emojis and special characters were removed to decrease noise in the data, and any residual URLs and email addresses were eliminated. Mentions and hashtags were removed as well. We also normalized whitespace by collapsing multiple spaces into a single space, and we removed the diacritics.
+The text was then tokenized, punctuation was removed from tokens, with the exception of keeping the octothorpe in the word 'C\#' and 'F\#', since these are programming language names, and module names. Tokens longer than 40 characters were excluded. We removed common English stopwords and lemmatized the remaining words to their base forms.\\
 We used lemmatization as we thought that reducing the word to its base form instead of stemming it would preserve more semantic meaning and yield better results in subsequent steps.
 
 
@@ -212,14 +211,23 @@ The correlation between recall and predictions is 0.77 which give quite a strong
 \end{table}
 
 \subsection*{Clusters}
+\subsubsection{Train set issues cluster}
 We thought it could have been interesting to see how the issues and assignee are clustered.\\
 From the following image can be observed that the issues form quite well defined and disjointed clusters around their assigned Assignee.\\
 It would thus be natural to attempt to classify new documents based on these clusters to assign them to a user.\\
 This information can be used to validate our results and potentially even to refine the model further.
+The image below represent a sample of the train set.
 \begin{table}[H]
 	\centering
 	\caption{Clustering of issues in relation to assignees}
 	\includegraphics[width=\textwidth]{plot.png}
+\end{table}
+\subsubsection{Recent issues cluster}
+The image below illustrates a sample of the training set. It is evident that the clusters are less well-defined in this instance. This ambiguity could contribute to the lower accuracy observed with recent issues. Additionally, there may be increased variability between assignees and issue documents.
+\begin{table}[H]
+	\centering
+	\caption{Clustering of issues in relation to assignees}
+	\includegraphics[width=\textwidth]{plot2.png}
 \end{table}
 
 \section*{Interface}
@@ -237,7 +245,5 @@ In the project we had the chance of developing a tool for automated bug triaging
 Developing this tool we came to appreciate both the strength of such an approach to solve this kind of problems and the challenges faced in developing it.\\
 We also appreciated doing this kind of work in a quite realistic context, given that the vscode repository was used, and can picture many practical applications of similar techniques to solve similar challenges in industry.\\
 It is also our opinion that we achieved satisfactory results in terms of accuracy.
-
-
 
 \end{document}
