--- a/report/report.tex
+++ b/report/report.tex
@@ -227,7 +227,7 @@ The image below illustrates a sample of the training set. It is evident that the
 \begin{table}[H]
 	\centering
 	\caption{Clustering of issues in relation to assignees}
-	\includegraphics[width=\textwidth]{plot2.png}
+	\includegraphics[width=\textwidth]{plot_sparse.png}
 \end{table}
 
 
